第四章完成

--- a/translation/04_第四章.md
+++ b/translation/04_第四章.md
@@ -991,22 +991,22 @@ int main() {
 
 ## 编程项目
 
-### 4A SUM THREE
+### 4A 三个数之和
 
-Write the function sumThree that returns the sum of three double arguments.
+请编写一个命名为`sumThree`的函数，它的功能是返回三个`double`类型实参的和值。
 
 ```C++
 // Test drive sumThree
 int main() {
-    cout << sumThree(1.1, 2.2, 3.3) << endl; // 6.6 cout
-         << sumThree(-1, -2, 3) << endl;     // 0
+    cout << sumThree(1.1, 2.2, 3.3) << endl; // 6.6
+    cout << sumThree(-1, -2, 3) << endl;     // 0
     return 0;
 }
 ```
 
-### 4B ROUNDING TO `n` DECIMAL PLACES
+### 4B 四舍五入至`n`位小数
 
-Write a function named round that returns the value of its double argument rounded to the number of decimal places specifi ed as the second argument.
+请编写一个名为`round`的函数，它的功能是将其`double`类型的实参值四舍五入至第二个实参所指定的小数位。
 
 ```C++
 // Test drive round
@@ -1021,13 +1021,13 @@ int main() {
 }
 ```
 
-### 4C PAYMENT
+### 4C 还贷问题
 
-The payment on a loan is a function of the interest rate, the number of payments (periods), and the amount borrowed. Pass these three values as arguments to a function payment that returns the loan payment. The function heading is provided for you along with a test driver. Round your answer to two decimal places (see Section 3.2). See if your answers match an online mortgage calculator.
+贷款的还款问题是一个关于贷款利率、还款次数（即还款的周期）和贷款总额的函数。请以这三个变量为实参编写一个名为`payment`的函数，功能是根据传入函数的三个实参值返回相应的需还款数。我们在下面为你定义好了函数头信息和相应的测试驱动程序。另外，请将最终的答案值四舍五入至两位小数（参见第3.2节），然后验证一些你得到的结果是否与在线抵押贷款计算器匹配。
 
 ```C++
-#include <iostream> // For the cout object
-#include <cmath> // For pow, which you de nitely need here
+#include <iostream>    // For the cout object
+#include <cmath>       // For pow, which you denitely need here
 using namespace std;
 
 double payment(double amtBorrowed, double interestRate, int numPeriods) {
@@ -1040,29 +1040,27 @@ int main() { // Test drive payment
     // interest rate, The number of years (30) also needs to multiplied
 
     // by 12. The following test cases represent a monthly payment.
-    cout << payment(185000.00, 6.0/100.0/12, 30\*12) << endl;
-    cout << payment(185000.00, 5.0/100.0/12, 30\*12) << endl;
-    cout << payment(185000.00, 4.0/100.0/12, 30\*12) << endl;
+    cout << payment(185000.00, 6.0/100.0/12, 30*12) << endl;
+    cout << payment(185000.00, 5.0/100.0/12, 30*12) << endl;
+    cout << payment(185000.00, 4.0/100.0/12, 30*12) << endl;
 
     return 0;
 }
 ```
 
-Here is the formula used to calculate payments on a loan given the amount borrowed, interest rate for one period, and the number of periods:
+给定贷款总额、单次还款利率以及还款次数的还贷计算公式如下：
 
 $$ Payment = Amount * Rate * \frac{{(Rate + 1)}^{Months}}{{(Rate + 1)}^{Months}-1} $$
 
-### 4D POPULATION GROWTH PREDICTION
+### 4D 人口增长预测
 
-According to **http://www.census.gov/popclock/**, at the time of this writing the population growth in the United States can be predicted as follows:
+根据 **http://www.census.gov/popclock/** 的统计数据。直到笔者编写本书的当下，我们对美国人口增长的预估是这样的：
 
-One birth every *8 seconds*
+* 每*8秒*出生一人。
+* 每*13秒*死亡一人。
+* 每*40秒*迁入一位国际移民。
 
-One death every *13 seconds*
-
-One international migrant (net) every *40 seconds*
-
-Write a function that predicts the population for any number of days into the future when also given the current population. Th e following test driver must compile and generate the output shown in comments:
+请根据上述信息编写一个用于人口增长预测的函数，它要能返回在任意给定天数之后，在给定当前人口基础上新增的人口数。下面是我们位该函数提供的测试驱动程序，注释中标出了其中各个调用应该产生的输出：
 
 ```C++
 int main() {
@@ -1074,30 +1072,30 @@ int main() {
 
     // One and two year growth
     cout << populationPrediction(320000000, 365) << endl; // 322304554
-    cout << populationPrediction(320000000, 2\*365) << endl; // 324609108
+    cout << populationPrediction(320000000, 2*365) << endl; // 324609108
 
     return 0;
 }
 ```
 
-Once the function has been tested, write a complete program that prompts the user for the current population and the days into the future using a dialog that looks just like this:
+在函数通过了测试之后，请再为其编写一个可由用户在终端输入当前人口数和待预测天数的完整程序，其整个程序的回话过程应该如下：
 
 ```shell
 Predict population growth given the current population and days into the future
 
 Current population? 320000000
 Day into the future? ***365***
-```
 
 In 365 days, the population should grow by 2304554 to become 322304554
+```
 
-### 4E QUADRATIC FORMULA
+### 4E 求根公式
 
-The quadratic formula (below) uses the `a`, `b`, and `c` from quadratic equations of the form $ax^2 + bx + c$ to find both roots.
+在下面的求根公式中，我们要使用`a`、`b`、`c`三个变量计算出$ax^2 + bx + c$这个二次方程式的平方根。
 
 $$ x = \frac{-b + \sqrt{b^2 - 4ac}}{2a} $$
 
-For example, the two real roots of *x*^2^ + 3*x* − 4 are 1 and −4 as indicated by this dialog and the plotting of this function:
+例如，$x^2 + 3x − 4$的两个实根应该是1和−4，其函数执行时的会话过程应该如下：
 
 ```shell
 Enter a b and c coef cients of a quadratic equation: ***1 3 -4***
@@ -1113,7 +1111,7 @@ This should be 0 or very close? 0
 
 ![4-1](img/4-1.png)
 
-You are asked to complete and test these three functions as described in the comments:
+现在，我们的要求是根据以下注释中的说明完成下面三个函数，并测试它们：
 
 ```C++
 // Given the 3 coef cients, compute the two roots that
@@ -1132,7 +1130,7 @@ double evaluate(double a, double b, double c, double root)
 int main()
 ```
 
-To avoid the roots being not a number (nan) when there is a negative square root, complex numbers could be used. However, if the roots are not real, the return result is allowed to be nan (or -1.\#IND in Visual Studio as of this writing). Th e quadratic equation 3*x*^2^ + 4*x* + 2 has no real roots. Th is program run indicates there are no real roots since nan is returned with 3, 4, and 2 input for a, b, and c respectively:
+为了避免函数在计算负数的平方根时得到非数字的结果（`nan`），这里可以使用负数。 但如果计算结果不是实根，就允许返回`nan`作为结果（或者是Visual Studio中的`-1.#IND`）。譬如$3x^2 + 4x + 2$这个二次方程式是没有实根的，所以当`a`、`b`、`c`依次被输入的值为3、4、2时，该程序就会显示它没有实根：
 
 ```shell
 Enter a b and c coef cients of a quadratic equation: ***3 4 2***
