--- a/translation/06_第六章.md
+++ b/translation/06_第六章.md
@@ -21,7 +21,7 @@ When a function belongs to a class, it becomes a class member function. Class me
 
 + 运用一些面向对象的设计指南
 
-#### 6.1 在头文件中定义类
+### 6.1 在头文件中定义类
 
 Abstraction refers to the practice of using and understanding something without full knowledge of its implementation. Abstraction allows the programmer using a class to concentrate on the data characteristics and the messages that manipulate the state. For example, a programmer using the string class need not know the details of the internal data representation or how those opera- tions are implemented in the hardware and software.  e programmer can concentrate on the set of allowable messages—the interface.
 
@@ -53,5 +53,75 @@ Design is in uenced by personal opinion, evolving research, and the domain, whic
 
 我们所学习过的对象的类，通常是大型程序的基石，例如`study-ostream`，`istream`，`string`，`BankAccount`和`Grid`。但是，程序通常需要许多其他类。它们可能是标准类，常用的类，或者其他必须由编程团队设计和实现的类。
 因为很难掌握大型项目中的所有类，所以本节提供了一些理解不熟悉的类的一般技巧。另外，我们还提供一些面向对象软件开发的重要经验。
+
+ is process begins with learning to read class de nitions. You will also implement member functions and add new operations to existing classes.  is approach has the added bene t of mak- ing it easier to design and implement new classes of your own.A class de nition lists member functions after the keyword public:.  is set of operations represents the class interface.  e class de nition also lists the data members—the object declara- tions after private:.  is set of data members represents the state of the objects.A class de nition provides a lot of information. A class de nition stresses the what, not the how. It lists the messages understood by the objects. It speci es the number, type, and orderof arguments required when sending a message to one of the objects. When documented with preconditions, postconditions, and example messages, a class de nition also explains how to use instances of the class.  e documentation may provide other pertinent information. All of these things allow the programmer to use objects of the class without knowing the details of the imple- mentation.
+
+这个过程从学着阅读类的定义开始。您还将实现成员函数，以及向现有类添加新操作。实现这一目标有一个额外的好处——它可以更容易地设计和实现自己的新类。
+
+一个类的定义中，成员函数列在关键字`public:`之后。这组操作操作代表了类的接口。类定义还列出了`数据成员`——也就是那些`private:`关键字之后的对象声明。数据成员集表示了对象的状态。
+
+类的定义提供了大量信息。类定义强调的是“它是什么”，而不是“它是如何实现的“。它列出了对象理解的消息。当消息发送给给对象时，它也指定了参数的数量、类型和顺序。文档可以说明前置条件、后置条件和示例消息，而类类的定义解释了如何使用类的实例。文档还可能提供其他相关信息。所有这些信息都使得程序员程序员能够在不知道实现细节的情况下使用类的对象。
+
+【代码 6.1】
+
+##### 6.1.1 定义`BankAccount`类
+Now let’s get down to a concrete, familiar example. Recall that the data members in the private section represent the state. Every BankAccount object stores its own private name and balance data.  e public section has the member functions representing the messages each BankAccount understands: withdraw, deposit, getBalance, and getName.  ese are combined in the header  le BankAccount.h as a class de nition.
+
+现在让我们来看一个具体、熟悉的例子。回想一下，标记为”私有“的数据成员代表了对象的状态。每个`BankAccount`对象都存储自己的私有名称和余额数据。标记为”公有“的成员函数代表每个`BankAccount`对象理解的消息的成员函数：`withdraw`，`deposit`，`getBalance`和`getName`。这些都作为类的定义，在头文件`BankAccount.h`中组合在一起。
+
+【BankAccount头文件代码】
+
+Most BankAccount member function headings in this BankAccount class de nition are similar to the nonmember function headings—they usually have return types and parameters. However, one of the member function headings above does not fall into this category. Can you spot some- thing di erent about the function heading with the name BankAccount?First of all, the BankAccount::BankAccount member function has no return type. It also has the same name as the class!  ese special member functions are referred to as constructors be- cause they are used to “build” objects. Speci cally, constructors associate the object name witha portion of memory and initialize the data members of the object as in a BankAccount object construction. For example, this code constructs a BankAccount object with an initial name of "Pat Barker" and an initial balance of 507.34, which can be referenced with the variable named anAccount.
+
+在`BankAccount`类定义中的大多数成员函数的定义，都类似于其非成员函数——它们通常具有返回类型和参数。但是，上述成员函数之一不属于此类别。您能否找到名称为`BankAccount`的函数定义的不同之处？
+首先，`BankAccount::BankAccount`成员函数没有返回类型。它也与类同名！这些特殊的成员函数被称为`构造函数`，因为它们用于“构建”对象。具体而言，构造函数将对象名称与内存的一部分关联在一起，并在`BankAccount`对象构造中初始化对象的数据成员。例如，以下代码会构造一个`BankAccount`对象，其初始名称为“Pat Barker”，初始余额为507.34，并且可以使用名为`anAccount`的变量引用。
+
+```
+BankAccount anAccount("Pat Barker", 507.34);
+```
+
+让我们再来构造一个对象：
+
+```
+BankAccount another("Skyler Boatwright", 437.05);
+```
+
+there exists a separate BankAccount object with its own balance of 437.05 and its own name of "Skyler Boatwright". So the return values of these two messages would be 507.34 followed by 437.05.
+
+于是我们有了一个独立的`BankAccount`对象，它的名字是”Skyler Boatwright“，余额为437.05元。于是以下两个表达式的打印输出就是507.34和437.05：
+
+```
+cout << anAccount.balance() << endl;  // 507.34cout << another.balance() << endl;    // 437.05
+```
+
+#### 自我检查
+
+请根据这个类的定义来回答以下问题：
+
+【类的定义】
+
+6-1 What is the name of the class de ned above?
+
+6-2 Name all the member functions that modify the state of the objects.6-3 Name all the member functions that access the state of the objects and cannot change that state.
+
+6-4 Name all data members.6-5 What type of value is returned by LibraryBook::getBorrower?6-6 What type of value is returned by LibraryBook::isAvailable?6-7 Initialize one LibraryBook object using your favorite book and author.6-8 Send the message that borrows your favorite book. Use your own name as the argument.6-9 Write the message that returns the borrower’s name of the book.
+
+6-1 上述所定义的类的名称是什么？
+
+6-2 写出会修改对象状态的所有成员函数。
+
+6-3 写出访问对象状态，并且不能更改该状态的所有成员函数。
+
+6-4 写出所有数据成员。
+
+6-5 `LibraryBook::getBorrower`返回什么类型的值？
+
+6-6 `LibraryBook::isAvailable`返回什么类型的值？
+
+6-7 使用您喜欢的书籍和作者初始化一个`LibraryBook`对象。
+
+6-8 发送借阅您最喜欢的书的消息。使用您自己的名称作为参数。
+
+6-9 写出返回借书人名字的信息。
 
 
